--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,9 +10,9 @@
   <section>
     <h1>Bookmarked Segments</h1>
   </section>
-<h1>Github</h1>
   <section class='github'>
-    <%=  user.repos.each do |repo| %>
+    <h1>Github Repositories</h1>
+    <%  user.repos.each do |repo| %>
     <section class='repository'>
 
       <%= link_to repo.name, repo.url %>
