adds functionality for card 14, github following

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,11 +14,16 @@
     <section class='github'>
       <h1>Github Repositories</h1>
       <%  user.repos.each do |repo| %>
-      <section class='repository'>
-
-        <%= link_to repo.name, repo.url %>
-          </section>
+        <section class='repository'>
+          <%= link_to repo.name, repo.url %>
+        </section>
+      <% end %>
+      <h1>Github Users You Follow</h1>
+      <% user.followed_user.each do |user| %>
+        <section class="followed_user">
+          <%= link_to user.github_name, user.github_url %>
+        </section>
       <% end %>
     </section>
-    <% end %>
-  </section>
+  <% end %>
+</section>
