Implement github oauth, hangup on VCR

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,5 +32,7 @@
       </section>
     <% end %>
     </section>
+  <% else %>
+  <%= link_to "Connect with GitHub", '/auth/github' %>
   <% end %>
 </section>
