Add user can add friend spec.rb
Co-authored-by: Trevor Nodland <42710030+tnodland@users.noreply.github.com>

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,8 +22,8 @@
         </section>
       <% end %>
       <h1>Github Users You Follow</h1>
-      <% user.followed_user.each do |user| %>
-        <section class="followed_user">
+      <% user.following.each do |user| %>
+        <section class="following">
           <%= link_to user.name, user.url %>
         </section>
       <% end %>
