--- a/app/views/tutorials/show.html.erb
+++ b/app/views/tutorials/show.html.erb
@@ -2,14 +2,16 @@
 <h2><%= @facade.title %></h2>
 <h1 id="message"></h1>
 <div class="col col-4">
+  <% if @facade.videos_should_be_visible? %>
   <h4>Videos</h4>
   <ul>
     <% @facade.videos.each do |video| %>
-      <li>
-        <h3><%= link_to video.title, tutorial_path(video_id: video.id), class: "show-link", id: video.position %></h3>
-      </li>
-    <% end %>
+        <li>
+          <h3><%= link_to video.title, tutorial_path(video_id: video.id), class: "show-link", id: video.position %></h3>
+        </li>
+      <% end %>
   </ul>
+
 </div>
 
 <div class="col col-8">
@@ -65,5 +67,8 @@
     <%= link_to "More", "#", "data-action" => "click->tutorials#showDescription", id: @facade.current_video.id, class: "show-link"%>
   </p>
 </div>
+<% else %>
+<h1>You must login to view this content</h1>
+<% end %>
 
 </main>
