--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,7 +52,7 @@
   <section class='friends'>
     <h1>Your Friends</h1>
     <% user.friends.each do |friend| %>
-      <%= "#{friend.first_name} #{friend.last_name}" %>
+      <%= "#{friend.github_name}" %>
     <% end %>
 
   </section>
