--- a/app/views/activation_mailer/activate.text.erb
+++ b/app/views/activation_mailer/activate.text.erb
@@ -1,1 +1,1 @@
-Hello <%= @user.first_name.capitalize %>, Youre getting this email because you recently created an account on brownfield_of_sorrow.com. <%= link_to "Click here to activate your account", user_activation_url(@user) %>.
+Hello <%= @user.first_name.capitalize %>, Youre getting this email because you recently created an account on Brownfield of Sorrow. <%= link_to "Click here to activate your account", user_activation_url(@user) %>.
