adds functionality and test for a user inviting a github user to the site, adds a sad path test for an invalid github handle, adds 2 new fixtures for webmocking the single_user github service method
Co-authored-by: Patrick Duvall <duvallp208@gmail.com>

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,7 @@
       <% end %>
   </section>
   <% if current_user.token %>
+    <p><%= link_to "Send an Invite", invite_path %></p>
     <section class='github'>
       <section class='github-repositories'>
       <h1>Github Repositories</h1>
