--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,7 +31,7 @@
         <section class="following">
           <%= link_to following.name, following.url %>
           <% unless user.friended?(following) %>
-          <%= link_to "Add #{following.name} to Friends", friends_path('other_user_github_id' => following.github_id), method: 'post' %>
+          <%= button_to "Add #{following.name} to Friends", friends_path('other_user_github_id' => following.github_id), method: :post %>
           <% end %>
         </section>
       <% end %>
@@ -42,7 +42,7 @@
       <section class='follower'>
       <%= link_to follower.name, follower.url %>
       <% unless user.friended?(follower) %>
-      <%= link_to "Add #{follower.name} to Friends", friends_path('other_user_github_id' => follower.github_id), method: 'post' %>
+      <%= button_to "Add #{follower.name} to Friends", friends_path('other_user_github_id' => follower.github_id), method: :post %>
       <% end %>
       </section>
     <% end %>
